# RayTracingInOneSabbatical

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
images/: example.ppm  test.xcf
src/: FormatRenderIface.h  PPMFormatRender.cpp  PPMFormatRender.h  RenderIface.h  camera.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rtsabbatical.h  sphere.h  vec3.h
